# itmo_timeseries

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: shop_sales_all.csv
notebooks/: data_analysis.ipynb  exam task.ipynb  solution_class.ipynb  test_models.ipynb
